--- a/portfolio.html
+++ b/portfolio.html
@@ -47,7 +47,7 @@
             <div class="container">
                 <h1 class="filter-title">Filters</h1>
                 <ul class="filter-list list">
-                    <li class="filter-item"><button class="btn" type="button">All</button></li>
+                    <li class="filter-item"><button class="btn btn-active" type="button">All</button></li>
                     <li class="filter-item"><button class="btn" type="button">Web Site</button></li>
                     <li class="filter-item"><button class="btn" type="button">App</button></li>
                     <li class="filter-item"><button class="btn" type="button">Design</button></li>
@@ -59,7 +59,7 @@
                 
                 
                 <ul class="portfolio-list list">
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-1.jpg" alt="Picture 1">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Banking App Interface Concept</h2>
@@ -67,7 +67,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-2.jpg" alt="Picture 2">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Cashless Payment</h2>
@@ -75,7 +75,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-3.jpg" alt="Picture 3">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Meditaion App</h2>
@@ -83,7 +83,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-4.jpg" alt="Picture 4">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Taxi Service</h2>
@@ -91,7 +91,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-5.jpg" alt="Picture 5">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Screen Illustrations</h2>
@@ -99,7 +99,7 @@
                             </div>
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-6.jpg" alt="Picture 6">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Online Courses</h2>
@@ -107,7 +107,7 @@
                             </div> 
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-7.jpg" alt="Picture 7">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Instagram Stories Concept</h2>
@@ -115,7 +115,7 @@
                             </div>  
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-8.jpg" alt="Picture 8">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Organic Food</h2>
@@ -123,7 +123,7 @@
                             </div>  
                         </a>
                     </li>
-                    <li><a class="portfolio-link link" href="#">
+                    <li class="portfolio-item"><a class="portfolio-link link" href="#">
                             <img class="potfolio-img" width="360" src="./img/picture-9.jpg" alt="Picture 9">
                             <div class="portfolio-border">
                                 <h2 class="list-title">Fresh Coffee</h2>
